--- a/CareerTestWeb/appsettings.json
+++ b/CareerTestWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=DESKTOP-B3STGKR;Initial Catalog=MBTI;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+        "DefaultConnection": "Data Source=ZEPHYRUS\\HAO0109;Initial Catalog=MBTI;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
     },
     "Logging": {
         "LogLevel": {
